argo/apps/wireguard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wg-easy-vpn
  namespace: wireguard
  annotations:
    metallb.universe.tf/loadBalancerIPs: "10.0.20.202"
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: wg-easy
  ports:
    - name: wireguard
      protocol: UDP
      port: 51820
      targetPort: 51820
---
apiVersion: v1
kind: Service
metadata:
  name: wg-easy-ui
  namespace: wireguard
spec:
  selector:
    app: wg-easy
  ports:
    - port: 51821
      targetPort: 51821
