argo/apps/wireguard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wg-easy-ui
  namespace: wireguard
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
spec:
  ingressClassName: nginx
  tls:
    - hosts: [wg.mbianchi.me]
      secretName: wg-easy-tls
  rules:
    - host: wg.mbianchi.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wg-easy-ui
                port:
                  number: 51821
